refactoring | add new propject

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,14 @@
 node_modules/
-bundle/
-npm-debug.log
-build
-dist
-*.log
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
 
-.*
-!.npmrc
-!.yarnrc
-!.env.custom
-!.env.demo
-!.env.production
-!.babelrc.js
-!.editorconfig
-!.eslintignore
-!.eslintrc.js
-!.gitignore
-!.gitlab-ci.yml
-!.stylelintrc
-!.gitkeep
-
-.scannerwork/
-.sonar/
-.sonar_lock
-esreport.json
-index.js
+# macOS
+.DS_Store
